--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+*{
+  font-family: var(--fontFamily);
+  box-sizing: border-box;
+  font-size: 1rem;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -11,6 +17,67 @@ a {
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+.title, h1{
+  margin: 30px 0 !important;
+}
+
+.title{
+  font-size: var(--titleFontSize);
+}
+
+h1{
+  font-size: 32px;
+}
+
+h2{
+  margin: 24px 0 !important;
+  font-size: 24px;
+}
+
+h3{
+  margin: 15px 0 !important;
+  font-size: 18.72px;
+}
+
+h4{
+  margin: 5px 0;
+  font-size: 16px;
+}
+
+input{
+  display: block;
+  width: 100%;
+  height: 48px !important;
+  padding: 14px 16px;
+  border-radius: 8px;
+  border: 2px solid black;
+  outline: none;
+  margin: 16px 0;
+}
+
+input:focus{
+  border-color: var(--tertiaryColor) !important;
+}
+
+button{
+  cursor: pointer;
+  border-radius: 40px;
+  height: 48px !important;
+  outline: none;
+  border: none;
+  transition: all 0.2s ease;
+  font-weight: 600;
+}
+
+button:hover{
+  transform: scale(1.05);
+}
+
+body{
+  margin: 2rem 10%;
+}
+
+.center{
+  display: grid;
+  place-items: center;
 }
