Add more Features

--- a/styles/form.css
+++ b/styles/form.css
@@ -1,22 +1,65 @@
+.LoginForm,
+.RegisterForm {
+  text-align: center;
+  width: 350px;
+}
 
-.LoginForm, .RegisterForm{
-    text-align: center;
+.login-btn {
+  width: 100%;
+  background-color: var(--tertiaryColor);
+}
+
+.register-btn {
+  width: 100%;
+  color: var(--contrastTextColor);
+  background-color: var(--quaternaryColor);
+}
+
+.login-btn + div,
+.register-btn + div {
+  margin-top: 1rem;
+  margin-left: 5px;
+  text-align: left;
+}
+
+.donate-register-btn {
+  padding: 0 1rem;
+  margin-right: 1rem;
+}
+.donate-register-btn1 {
+  background-color: var(--tertiaryColor);
+}
+
+input[name='confirm'] {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 100%;
+  height: 10px !important;
+  background: #000;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
+}
+
+input[name='confirm']::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 14px;
+  height: 14px;
+  border: 1px solid var(--quaternaryColor);
+  border-radius: 50%;
+  background: var(--tertiaryColor);
+  cursor: pointer;
+}
+
+.DonatorRegister{
     width: 350px;
 }
 
-.login-btn{
+.confirm{
+    margin-top: 3rem;
+}
+
+.complete-btn{
     width: 100%;
     background-color: var(--tertiaryColor);
-}
-
-.register-btn{
-    width: 100%;
-    color: var(--contrastTextColor);
-    background-color: var(--quaternaryColor);
-}
-
-.login-btn +div, .register-btn +div{
-    margin-top: 1rem;
-    margin-left: 5px;
-    text-align: left;
 }
