--- a/styles/post.css
+++ b/styles/post.css
@@ -1,67 +1,119 @@
-main{
-    display: grid;
-    grid-template-columns: 70% 30%;
-    gap: 1rem;
+main {
+  display: grid;
+  grid-template-columns: 70% 30%;
+  gap: 1rem;
 }
 
-.post-container{
-    width: 100%;
+.post-container {
+  width: 100%;
 }
 
-.PostDetail{
-    width: 100%;
-    padding: 1rem;
-    box-shadow: 0 0 10px 0 rgba(0,0,0,0.2);
-    border-radius: 10px;
+.PostDetail {
+  width: 100%;
+  padding: 1rem;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  background-color: var(--primaryColor);
 }
 
-.post-detail-top{
-    display: flex;
-    justify-content: space-between;
+.post-detail-top {
+  display: flex;
+  justify-content: space-between;
 }
 
-.post-user-info{
-    display: flex;
+.post-user-info {
+  display: flex;
 }
 
-.post-user-info-img{
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    margin-right: 10px;
-    border: 1px solid black;
+.post-user-info-img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-right: 10px;
+  border: 1px solid black;
 }
 
-.post-user-info-name a{
-    font-weight: bold;
-    display: block;
-    margin-bottom: 10px;
+.post-user-info-name a {
+  font-weight: bold;
+  display: block;
+  margin-bottom: 10px;
 }
 
-.donate-btn,.vote-btn{
-    background-color: var(--tertiaryColor) !important;
-    padding: 0.6rem 2rem;
-    height: fit-content !important;
+.donate-btn,
+.vote-btn {
+  background-color: var(--tertiaryColor) !important;
+  padding: 0.6rem 2rem;
+  height: fit-content !important;
 }
 
-.post-detail-bottom{
-    width: 100%;
-    margin: 1rem 0;
+.post-detail-bottom {
+  width: 100%;
+  margin: 1rem 0;
 }
 
-.target{
-    height: 10px;
-    background-color: var(--secondaryColor);
-    border-radius: var(--borderRadius);
-    position: relative;
+.target {
+  height: 10px;
+  background-color: var(--secondaryColor);
+  border-radius: var(--borderRadius);
+  position: relative;
 }
 
-.target-amout{
-    background-color: var(--quaternaryColor);
-    height: 10px;
-    width: 80%;
-    position: absolute;
-    left: 0;
-    top: 0;
-    border-radius: var(--borderRadius);
+.target-amout {
+  background-color: var(--quaternaryColor);
+  height: 10px;
+  width: 80%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  border-radius: var(--borderRadius);
+}
+
+.TopActivities {
+  width: 100%;
+  overflow: auto;
+  height: 80px;
+  border-radius: 10px 10px 0 0;
+  border: 1px solid black;
+  padding: 1rem 1rem 0 1rem;
+  display: flex;
+}
+
+
+.high-rate-post {
+  min-width: 300px;
+  max-width: fit-content;
+  cursor: pointer;
+  margin-right: 1rem;
+  border: 1px solid black;
+  padding: 0 1rem;
+}
+
+.hr-post-title {
+  font-weight: 500;
+}
+
+.hr-post-user-full-name {
+  font-size: 13px;
+}
+
+.wide-screen > i::before {
+  font-size: 34px;
+  cursor: pointer;
+  position: absolute;
+  right: 1rem;
+  top: 1rem;
+}
+
+.grid-4-6 {
+  display: grid;
+  grid-template-columns: 40% 60%;
+  gap: 1rem;
+}
+
+.create-post-btn {
+  position: fixed;
+  bottom: 1rem;
+  right: 1rem;
+  background-color: var(--tertiaryColor);
+  padding: 0 1rem;
 }
