--- a/styles/globals.css
+++ b/styles/globals.css
@@ -70,6 +70,11 @@ input[type="radio"]{
   width: 16px;
 }
 
+input[type="checkbox"]{
+  display: inline;
+  height: 1rem !important;
+}
+
 input:focus{
   border-color: var(--tertiaryColor) !important;
 }
