--- a/styles/donators.css
+++ b/styles/donators.css
@@ -1,8 +1,13 @@
+
+.TopDonators{
+    margin-top: 2rem;
+}
+
 .top-donators{
     min-height: 200px;
     width: 100%;
     background-color: var(--primaryColor);
-    box-shadow: 0 0 10px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 0 5px 0 rgba(0,0,0,0.2);
     border-radius: 10px;
     padding: 1rem;
 }
