--- a/styles/form.css
+++ b/styles/form.css
@@ -51,15 +51,72 @@ input[name='confirm']::-webkit-slider-thumb {
   cursor: pointer;
 }
 
-.DonatorRegister{
-    width: 350px;
+.DonatorRegister {
+  width: 350px;
 }
 
-.confirm{
-    margin-top: 3rem;
+.confirm {
+  margin-top: 3rem;
 }
 
-.complete-btn{
-    width: 100%;
-    background-color: var(--tertiaryColor);
+.complete-btn {
+  width: 100%;
+  background-color: var(--tertiaryColor);
+}
+
+
+input[name='anonymous'] {
+  appearance: none;
+}
+label[for='anonymous'] {
+  background-color: var(--secondaryColor);
+  padding: 0.7rem 1rem;
+  border-radius: var(--borderRadius);
+  font-weight: bold;
+}
+
+label[for='anonymous'] > i::before {
+  font-size: 1.5rem;
+}
+
+input[name='target'] {
+  appearance: none;
+}
+
+label[for='target'] {
+  background-color: var(--tertiaryColor);
+  padding: 0.7rem 1rem;
+  border-radius: var(--borderRadius);
+  font-weight: bold;
+}
+
+label[for='target'] > i::before {
+  font-size: 1.5rem;
+}
+
+.btn-create-post{
+  background-color: var(--quaternaryColor);
+  color: var(--contrastTextColor);
+  padding: 0 1rem;
+  margin-top: 1rem;
+}
+
+input[name="post-image"]{
+  width: fit-content;
+  height: fit-content !important;
+  border: none;
+  border-radius: 0;
+  padding: 0;
+}
+
+input[name="post-image"]::-webkit-file-upload-button {
+  /* visibility: hidden; */
+  display: none;
+}
+
+label[for="post-image"] {
+  background-color: rgb(248, 248, 248);
+  margin-top: 1rem;
+  padding: 0 1rem;
+  border-radius: var(--borderRadius);
 }
