--- a/styles/globals.css
+++ b/styles/globals.css
@@ -73,6 +73,10 @@ input[type="radio"]{
 input[type="checkbox"]{
   display: inline;
   height: 1rem !important;
+  padding: 0;
+  border: none;
+  margin: 0;
+  width: fit-content;
 }
 
 input:focus{
@@ -100,4 +104,17 @@ button:hover{
 
 cite{
   opacity: 0.7;
+}
+
+textarea{
+  resize: none;
+  min-width: 100%;
+  max-width: 100%;
+  min-height: 200px;
+  border: none;
+  outline: none;
+  padding: 1rem;
+  border-radius: 10px;
+  overflow: auto;
+  margin-bottom: 1rem;
 }
