--- a/styles/loadingstyle.css
+++ b/styles/loadingstyle.css
@@ -1,43 +1,44 @@
-.wide-screen{
-    width:100%;
-    height:100%;
-    position:fixed;
-    top:0;
-    left:0;
-    background-color:rgba(170, 170, 170, 0.5);
-    z-index:9999;
+.wide-screen {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(170, 170, 170, 0.5);
+  z-index: 9999;
+  overflow: auto;
 }
 
 .balls {
-    width: 3.5em;
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: center;
-    justify-content: space-between;
-  }
-  
-  .balls div {
-    width: 0.8em;
-    height: 0.8em;
-    border-radius: 50%;
-    background-color: #fc2f70;
+  width: 3.5em;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.balls div {
+  width: 0.8em;
+  height: 0.8em;
+  border-radius: 50%;
+  background-color: #fc2f70;
+  transform: translateY(-100%);
+  animation: wave 0.8s ease-in-out alternate infinite;
+}
+
+.balls div:nth-of-type(1) {
+  animation-delay: -0.4s;
+}
+
+.balls div:nth-of-type(2) {
+  animation-delay: -0.2s;
+}
+
+@keyframes wave {
+  from {
     transform: translateY(-100%);
-    animation: wave 0.8s ease-in-out alternate infinite;
   }
-  
-  .balls div:nth-of-type(1) {
-    animation-delay: -0.4s;
+  to {
+    transform: translateY(100%);
   }
-  
-  .balls div:nth-of-type(2) {
-    animation-delay: -0.2s;
-  }
-  
-  @keyframes wave {
-    from {
-      transform: translateY(-100%);
-    }
-    to {
-      transform: translateY(100%);
-    }
-  }
+}
