--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-*{
+* {
   font-family: var(--fontFamily);
   box-sizing: border-box;
   font-size: 1rem;
@@ -14,40 +14,57 @@ body {
   margin: 1rem 5%;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: #555;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #888;
+}
 
 a {
   color: inherit;
   text-decoration: none;
 }
 
-.title, h1{
+.title,
+h1 {
   margin: 30px 0 !important;
 }
 
-.title{
+.title {
   font-size: var(--titleFontSize);
 }
 
-h1{
+h1 {
   font-size: 32px;
 }
 
-h2{
+h2 {
   margin: 24px 0 !important;
   font-size: 24px;
 }
 
-h3{
+h3 {
   margin: 15px 0 !important;
   font-size: 18.72px;
 }
 
-h4{
+h4 {
   margin: 5px 0;
   font-size: 16px;
 }
 
-input{
+input {
   display: block;
   width: 100%;
   height: 48px !important;
@@ -58,19 +75,19 @@ input{
   margin: 16px 0;
 }
 
-input[type="range"]{
+input[type='range'] {
   padding: 0;
   margin: 0;
   border: none;
 }
 
-input[type="radio"]{
+input[type='radio'] {
   all: unset;
   appearance: auto;
   width: 16px;
 }
 
-input[type="checkbox"]{
+input[type='checkbox'] {
   display: inline;
   height: 1rem !important;
   padding: 0;
@@ -79,11 +96,11 @@ input[type="checkbox"]{
   width: fit-content;
 }
 
-input:focus{
+input:focus {
   border-color: var(--tertiaryColor) !important;
 }
 
-button{
+button {
   cursor: pointer;
   border-radius: 40px;
   height: 40px !important;
@@ -93,20 +110,21 @@ button{
   font-weight: 600;
 }
 
-button:hover{
+button:hover {
   transform: scale(1.05);
 }
 
-.center{
+.center {
   display: grid;
   place-items: center;
 }
 
-cite{
+cite {
+  font-size: 13px;
   opacity: 0.7;
 }
 
-textarea{
+textarea {
   resize: none;
   min-width: 100%;
   max-width: 100%;
