--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,10 @@ body {
   padding: 0;
   margin: 0;
   min-height: 100vh;
-  margin: 1rem 5%;
+}
+
+body {
+  margin: 1rem min(10%, 100% - 3rem);
 }
 
 ::-webkit-scrollbar {
@@ -67,7 +70,7 @@ h4 {
 
 input {
   display: block;
-  width: 98%;
+  width: 100%;
   height: 48px !important;
   padding: 14px 16px;
   border-radius: 8px;
