--- a/styles/post.css
+++ b/styles/post.css
@@ -117,6 +117,7 @@ main {
 }
 
 .CreatePostLayout {
+  width: 100%;
   background-color: var(--primaryColor);
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
   padding: 1rem;
@@ -156,7 +157,14 @@ main {
 }
 
 .ShortenedPost{
-  padding: 1rem;
-  background-color: var(--primaryColor);
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(11rem, 1fr));
+  gap: 1rem;
+}
+
+.pm-item{
+  width: 100%;
   border-radius: 10px;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
+  padding: 0 1rem;
 }
