All route Protected

--- a/styles/flex-grid.css
+++ b/styles/flex-grid.css
@@ -1,86 +1,129 @@
 .grid-container {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 1fr 1rem 1fr;
   grid-template-columns: 1fr 1fr;
   gap: 1rem;
 }
 
 .grid-1-9 {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 10% 1rem 90%;
   grid-template-columns: 10% 90%;
   gap: 1rem;
 }
 
 .grid-4-6 {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 40% 1rem 60%;
   grid-template-columns: 40% 60%;
   gap: 1rem;
 }
 
 .grid-3-7 {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 30% 1rem 70%;
   grid-template-columns: 30% 70%;
   gap: 1rem;
 }
 
 .grid-7-3 {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 70% 1rem 30%;
   grid-template-columns: 70% 30%;
   gap: 1rem;
 }
 
 .grid-8-2 {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 80% 1rem 20%;
   grid-template-columns: 80% 20%;
   gap: 1rem;
 }
 
 .grid-6-4 {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 60% 1rem 40%;
   grid-template-columns: 60% 40%;
   gap: 1rem;
 }
 
 .grid-2-8 {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 20% 1rem 80%;
   grid-template-columns: 20% 80%;
   gap: 1rem;
 }
 
 .flex-default {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
 .flex-space-between {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 
 .flex-space-around {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -ms-flex-pack: distribute;
   justify-content: space-around;
 }
 
 .flex-space-evenly {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: space-evenly;
+  -ms-flex-pack: space-evenly;
   justify-content: space-evenly;
 }
 
 .flex-default i {
   font-size: 34px;
   cursor: pointer;
+  -webkit-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
   transition: all 0.2s ease;
 }
 
 .flex-default i:hover {
+  -webkit-transform: scale(1.05);
+  -ms-transform: scale(1.05);
   transform: scale(1.05);
 }
 
 .reverse-flex-default {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+  -ms-flex-direction: row-reverse;
   flex-direction: row-reverse;
 }
 
 .flex-columns {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
 }
