--- a/styles/donators.css
+++ b/styles/donators.css
@@ -1,23 +1,27 @@
-
-.top-donators{
-    min-height: 200px;
-    width: 100%;
-    background-color: var(--primaryColor);
-    box-shadow: 0 0 5px 0 rgba(0,0,0,0.2);
-    border-radius: 10px;
-    padding: 1rem;
+.top-donators {
+  min-height: 200px;
+  width: 100%;
+  background-color: var(--primaryColor);
+  -webkit-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  padding: 1rem;
 }
 
-.top-donators-grid{
-    display: grid;
-    grid-template-columns: 20% 80%;
-    gap: 1rem;
-    font-weight: 500;
-    border-bottom: 1px solid black;
+.top-donators-grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 20% 1rem 80%;
+  grid-template-columns: 20% 80%;
+  gap: 1rem;
+  font-weight: 500;
+  border-bottom: 1px solid black;
 }
 
-.top-donators-name{
-    font-size: 1rem;
-    display: grid;
-    align-content: center;
+.top-donators-name {
+  font-size: 1rem;
+  display: -ms-grid;
+  display: grid;
+  -ms-flex-line-pack: center;
+  align-content: center;
 }
