--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,11 +1,20 @@
 .Footer{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     margin-top: 5rem;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
 
 .Footer .left, .right{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 
