--- a/styles/management.css
+++ b/styles/management.css
@@ -5,7 +5,7 @@
   border-radius: 10px;
 }
 
-.CreatePostLayout{
+.CreatePostLayout {
   width: 70%;
 }
 
@@ -18,76 +18,75 @@
   background-color: transparent;
 }
 
-
-.edit-btn > i{
+.edit-btn > i {
   font-size: 1.5rem;
   color: var(--quaternaryColor);
 }
 
 .delete-btn > i {
   font-size: 1.5rem;
-  color: rgb(255, 81, 81)
+  color: rgb(255, 81, 81);
 }
 
-.DeletePost{
+.DeletePost {
   background-color: var(--quaternaryColor);
   color: var(--contrastTextColor);
   border-radius: 5px;
   padding: 2rem;
 }
 
-.delete-confirm-btn{
+.delete-confirm-btn {
   background-color: red;
   color: white;
   padding: 0 1rem;
   margin-left: 1rem;
 }
 
-.cancel-btn{
+.cancel-btn {
   background-color: var(--tertiaryColor);
   padding: 0 1rem;
 }
 
-.update-btn{
+.update-btn {
   background-color: var(--quaternaryColor);
   color: var(--contrastTextColor);
   margin-right: 1rem;
   padding: 0 1rem;
 }
 
-.UpdatePost{
+.UpdatePost {
   background-color: var(--quaternaryColor);
   padding: 2rem;
   width: 60%;
   border-radius: 10px;
 }
 
-.UpdatePost > h2, .UpdatePost > div > div > span{
-  color: var(--contrastTextColor)
+.UpdatePost > h2,
+.UpdatePost > div > div > span {
+  color: var(--contrastTextColor);
 }
 
-.post-detail-content-img{
+.post-detail-content-img {
   background-color: var(--secondaryColor);
   margin-top: 1rem;
   border-radius: 10px;
 }
 
-.post-detail-content-img img{
+.post-detail-content-img img {
   cursor: pointer;
 }
 
-.post-detail-content-img img:hover{
+.post-detail-content-img img:hover {
   opacity: 0.7;
 }
 
-.edit-confirm-btn{
+.edit-confirm-btn {
   margin-top: 2rem;
   background-color: var(--tertiaryColor);
   padding: 0 1rem;
 }
 
-
-.UpdateUserInformation{
+.UpdateUserInformation {
   width: 400px;
   background-color: var(--secondaryColor);
   padding: 2rem;
