--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -1,86 +1,116 @@
-.navigation{
-    width: 100%;
-    height: 70px;
-    display: flex;
-    justify-content: space-between;
-    box-shadow: 0 0 100px 0 rgba(0,0,0,0.1);
-    border-radius: var(--borderRadius);
-    padding: 0 1rem;
-    margin-bottom: 3rem;
-    position: relative;
+.navigation {
+  width: 100%;
+  height: 70px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-shadow: 0 0 100px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 100px 0 rgba(0, 0, 0, 0.1);
+  border-radius: var(--borderRadius);
+  padding: 0 1rem;
+  margin-bottom: 3rem;
+  position: relative;
 }
 
-.logo{
-    width: 50px;
-    height: 70px;
-    display: grid;
-    place-items: center;
+.logo {
+  width: 50px;
+  height: 70px;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
 }
 
-.flex-nav-item{
-    display: flex;
+.flex-nav-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
-.nav-item{
-    width: fit-content;
-    font-weight: 600;
-    display: grid;
-    place-items: center;
-    margin: 0.5rem;
+.nav-item {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  font-weight: 600;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+  margin: 0.5rem;
 }
 
-.nav-item a{
-    transition: 0.2s all ease;
-    height: fit-content;
-    padding: 10px 1rem;
-    border-radius: var(--borderRadius);
+.nav-item a {
+  -webkit-transition: 0.2s all ease;
+  -o-transition: 0.2s all ease;
+  transition: 0.2s all ease;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  padding: 10px 1rem;
+  border-radius: var(--borderRadius);
 }
 
-.nav-item .login{
-    background-color: var(--tertiaryColor) !important;
+.nav-item .login {
+  background-color: var(--tertiaryColor) !important;
 }
 
-.nav-item .register{
-    background-color: var(--quaternaryColor) !important;
-    color: var(--contrastTextColor) !important;
+.nav-item .register {
+  background-color: var(--quaternaryColor) !important;
+  color: var(--contrastTextColor) !important;
 }
 
-.nav-item a:hover{
-    transform: scale(1.05);
-    background-color: var(--navBarHoverColor);
+.nav-item a:hover {
+  -webkit-transform: scale(1.05);
+  -ms-transform: scale(1.05);
+  transform: scale(1.05);
+  background-color: var(--navBarHoverColor);
 }
 
-.wallet{
-    background-color: var(--secondaryColor);
-    border: 1px solid var(--tertiaryColor);
+.wallet {
+  background-color: var(--secondaryColor);
+  border: 1px solid var(--tertiaryColor);
 }
 
-.img-dropdown{
-    width: 30px;
-    height: 30px;
-    border: 1px solid var(--quaternaryColor);
-    border-radius: 50%;
-    cursor: pointer;
+.img-dropdown {
+  width: 30px;
+  height: 30px;
+  border: 1px solid var(--quaternaryColor);
+  border-radius: 50%;
+  cursor: pointer;
 }
 
-
-.drop-down-content{
-    background-color: var(--primaryColor);
-    position: absolute;
-    width: max-content;
-    top: 101%;
-    right: 2rem;
-    border: 1px solid black;
-    border-top: 0px solid black;
-    z-index: 10;
+.drop-down-content {
+  background-color: var(--primaryColor);
+  position: absolute;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  top: 101%;
+  right: 2rem;
+  border: 1px solid black;
+  border-top: 0px solid black;
+  z-index: 10;
 }
 
-.drop-down-content a{
-    padding: 10px 1rem;
-    display: block;
+.drop-down-content a {
+  padding: 10px 1rem;
+  display: block;
 }
 
+.drop-down-content a:hover {
+  background-color: var(--navBarHoverColor);
+}
 
-.drop-down-content a:hover{
-    background-color: var(--navBarHoverColor);
+.faq_actived,
+.donators_actived {
+  -webkit-transition: 0.2s all ease;
+  background-color: var(--navBarHoverColor);
+  -o-transition: 0.2s all ease;
+  transition: 0.2s all ease;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  padding: 10px 1rem;
+  border-radius: var(--borderRadius);
 }
