--- a/styles/personalInformation.css
+++ b/styles/personalInformation.css
@@ -1,10 +1,15 @@
-.PersonalInformation{
-    background-color: var(--primaryColor);
-    box-shadow: 0 0 10px 0 rgba(0,0,0,0.2);
-    border-radius: 10px;
-    padding: 1rem;
-    line-height: 145%;
-    display: flex;
-    flex-direction: column;
+.PersonalInformation {
+  background-color: var(--primaryColor);
+  -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  padding: 1rem;
+  line-height: 145%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
 }
-
