--- a/styles/post.css
+++ b/styles/post.css
@@ -38,6 +38,13 @@ main {
   display: flex;
 }
 
+.post-detail-content-img  > img {
+  width: 100%;
+  min-height: 200px;
+  max-height: 500px;
+  object-fit: contain;
+}
+
 .post-user-info-img {
   width: 50px;
   height: 50px;
