--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -73,11 +73,18 @@
 }
 
 .img-dropdown {
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
   border: 1px solid var(--quaternaryColor);
   border-radius: 50%;
   cursor: pointer;
+}
+
+.img-dropdown img{
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  border-radius: 50%;
 }
 
 .drop-down-content {
